publican/datadir/Common_Content/common/en-US/css/common.css
/* ... */
.perl_Variable {
	color: #0000ff;
}


.perl_Warning {
	color: #0000ff;
}

/*Lists*/
ul {
	padding-left:1.6em;
	list-style-image:url(../images/dot.png);
	list-style-type: circle;
}

ul ul {
	list-style-image:url(../images/dot2.png);
	list-style-type: circle;
}

ol {
	list-style-image:none;
	list-style-type: decimal;
}

ol ol {
	list-style-type: lower-alpha;
}

ol.arabic {
	list-style-type: decimal;
}

ol.loweralpha {
	list-style-type: lower-alpha;
}

ol.lowerroman {
	list-style-type: lower-roman;
}

ol.upperalpha {
	list-style-type: upper-alpha;
}

ol.upperroman {
	list-style-type: upper-roman;
}

dt {
	font-weight:bold;
	margin-bottom:0em;
	padding-bottom:0em;
}

dd {
	margin:0em;
	margin-left:2em;
	padding-top:0em;
	padding-bottom: 1em;
}

li {
	padding-top:0px;
	margin-top:0em;
	padding-bottom:0px;
	margin-bottom:0.4em;
}

li p, li div.para {
	padding-top:0px;
	margin-top:0em;
	padding-bottom:0px;
	margin-bottom:0.3em;
}

/*images*/
img {
	display:block;
	margin: 2em 0;
	max-width: 55em;
}

.inlinemediaobject, .inlinemediaobject img {
	display:inline;
	margin:0em;
}

.figure img {
	display:block;
	margin:0;
}

.figure .title {
	margin:0em;
	margin-bottom:2em;
	padding:0px;
}

/*document modes*/
.confidential {
	background-color:#900;
	color:White;
	padding:.5em .5em;
	text-transform:uppercase;
	text-align:center;
}

.longdesc-link {
	display:none;
}

.longdesc {
	display:none;
}

.prompt {
	padding:0em .3em;
}

/*user interface styles*/
.screen .replaceable {
}

.guibutton, .guilabel {
	font-family: "liberation mono", "bitstream vera mono", "dejavu mono", monospace;
	font-weight: bold;
	white-space: nowrap;
}

.example {
	background-color: #ffffff;
	border-left: 3px solid #aaaaaa;
	padding-top: 1em;
	padding-bottom: 0.1em;
}

.example h6 {
	padding-left: 10px;
}

.example-contents {
	padding-left: 10px;
	background-color: #ffffff;
}

.example-contents .para {
/*	 padding: 10px;*/
}

/*terminal/console text*/
.computeroutput, 
.option {
	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
	font-weight:bold;
}

.replaceable {
	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
	font-style: italic;
}

.command, .filename, .keycap, .classname, .literal {
	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
	font-weight:bold;
}

/* no bold in toc */
.toc * {
	font-weight: inherit;
}

pre {
	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
	display:block;
	background-color: #f5f5f5;
	color: #000000;
	border: 1px solid #aaaaaa;
	margin-bottom: 0.3em;
	padding:.5em 1em;
	white-space: pre-wrap; /* css-3 */
	white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
	white-space: -pre-wrap; /* Opera 4-6 */
	white-space: -o-pre-wrap; /* Opera 7 */
	word-wrap: break-word; /* Internet Explorer 5.5+ */
	font-size: 0.9em;
}

pre .replaceable, 
pre .keycap {
}

code {
	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
	white-space: nowrap;
	font-weight:bold;
}

.parameter code {
	display: inline;
	white-space: pre-wrap; /* css-3 */
	white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
	white-space: -pre-wrap; /* Opera 4-6 */
	white-space: -o-pre-wrap; /* Opera 7 */
	word-wrap: break-word; /* Internet Explorer 5.5+ */
}

/*Notifications*/
div.warning:before {
	content:url(../images/warning.png);
	padding-left: 5px;
}

div.note:before {
	content:url(../images/note.png);
	padding-left: 5px;
}

div.important:before {
	content:url(../images/important.png);
	padding-left: 5px;
}

div.warning, div.note, div.important {
	color: black;
	margin: 0em;
	padding: 0em;
	background: none;
	background-color: white;
	margin-bottom: 1em;
	border-bottom: 1px solid #aaaaaa;
}

div.warning h2, div.note h2,div.important h2 {
	margin: 0em;
	padding: 0em;
	padding-left: 58px;
	color: #eeeeec;
	font-size: large;
	margin-top: -2.4em;
	padding-top: 0px;
	padding-bottom: 0px;
	height: 26px;
	line-height: 1.4em;
	font-size: 1.4em;
}

div.warning h2 {
	background-color: #9e0000;
	background-image: url(../images/red.png);
}

div.note h2 {
	background-color: #8e9f00;
	background-image: url(../images/green.png);
}

div.important h2 {
	background-color: #d08e13;
	background-image: url(../images/yellow.png);
}


div.warning p, div.warning div.para,
div.note p, div.note div.para,
div.important p, div.important div.para {
	padding: 0em;
	margin: 0em;
/*	padding-left: 2em;
	padding-right: 1em;
	background-color: #eeeeec;
	padding-top: 1.5em;
	padding-bottom: 1em;
	border-left: 1px solid #aaaaaa;
	border-right: 1px solid #aaaaaa;
*/
}

div.admonition {
	border: none;
	border-left: 1px solid #aaaaaa;
	border-right: 1px solid #aaaaaa;
	padding:0em;
	margin:0em;
	padding-top: 1.5em;
	padding-bottom: 1em;
	padding-left: 2em;
	padding-right: 1em;
	background-color: #eeeeec;
	-moz-border-radius: 0px;
	-webkit-border-radius: 0px;
	border-radius: 0px;
}

/*Page Title*/
#title  {
	display:block;
	height:45px;
	padding-bottom:1em;
	margin:0em;
}

#title a.left{
	display:inline;
	border:none;
}

#title a.left img{
	border:none;
	float:left;
	margin:0em;
	margin-top:.7em;
}

#title a.right {
	padding-bottom:1em;
}

#title a.right img {
	border:none;
	float:right;
	margin:0em;
	margin-top:.7em;
}

/*Table*/
table {
	border:1px solid #6c614b;
	width:100%;
	border-collapse:collapse;
}

table.simplelist, .calloutlist table {
	border-style: none;
}

table th {
	text-align:left;
	background-color:#6699cc;
	padding:.3em .5em;
	color:white;
}

table td {
	padding:.15em .5em;
}

table tr.even td {
	background-color:#f5f5f5;
}

table th p:first-child, table td p:first-child, table  li p:first-child,
table th div.para:first-child, table td div.para:first-child, table  li div.para:first-child {
	margin-top:0em;
	padding-top:0em;
	display:inline;
}

th, td {
	border-style:none;
	vertical-align: top;
	border: 1px solid #000;
}

.simplelist th, .simplelist td {
	border: none;
}
/* ... */

